bugfix: scrolloverflow bugfix

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -15,6 +15,7 @@
 html {
   width: 100vw !important;
   overflow-y: overlay;
+  overflow-x: hidden !important;
 }
 * {
   box-sizing: border-box;
